# BawalPathFinder

./: .gitignore  Dockerfile  LICENCE  Makefile  README.md  README_en.md
.github/workflows/: docker-ci.yml
Interface/: Cargo.toml
Interface/src/: main.rs  menu.rs  navigation.rs  panels.rs  setup.rs  states.rs
Interface/src/simulation_2d/: message.rs  mod.rs
Interface/src/simulation_3d/: mod.rs  urdf_loader.rs
ROS_workspace/: Dockerfile
ROS_workspace/description/: CMakeLists.txt
ROS_workspace/description/launch/: description.launch.py
ROS_workspace/localization/: CMakeLists.txt  package.xml
ROS_workspace/localization/config/: ekf.yml
ROS_workspace/localization/launch/: localization.launch.py
ROS_workspace/localization/src/: ekf_node.cpp
ROS_workspace/navigation/: CMakeLists.txt  package.xml  plugin_description.xml
ROS_workspace/navigation/config/: nav2_params.yaml
ROS_workspace/navigation/include/: A_Star.hpp  Dijkstra_Solver.hpp  Djikstra.hpp  DualPlannerPlugin.hpp  PathFinder.hpp  SelectablePlanner.hpp
ROS_workspace/navigation/launch/: bringup.launch.py  navigation.launch.py
ROS_workspace/navigation/maps/: generate_test_map.py  map.pgm  map.yaml
ROS_workspace/navigation/src/: A_Star.cpp  A_Star_Solver.cpp  Dijkstra_Solver.cpp  Djikstra.cpp  DualPlannerPlugin.cpp  GBFS_Solver.cpp  PathFinder.cpp  SelectablePlanner.cpp  TestNode.cpp
ROS_workspace/src/description/: package.xml
ROS_workspace/src/navigation/: CMakeLists.txt  package.xml
ROS_workspace/src/navigation/config/: custom_bt.xml  nav2_params.yaml
ROS_workspace/src/navigation/include/: A_Star_Solver.hpp  Dijkstra_Solver.hpp  GBFS_Solver.hpp  PathFinder.hpp  SelectablePlanner.hpp
ROS_workspace/src/navigation/launch/: bringup.launch.py  navigation.launch.py
ROS_workspace/src/navigation/maps/: map_action_159.yaml  map_agree_894.yaml  map_beyond_190.yaml  map_food_944.yaml  map_leave_204.yaml  map_mouth_977.yaml  map_peace_747.yaml  map_set_121.yaml  map_subject_362.yaml  map_third_589.yaml  map_thought_631.yaml  map_will_343.yaml  map_yeah_560.yaml
ROS_workspace/src/navigation/src/: A_Star_Solver.cpp  Dijkstra_Solver.cpp  GBFS_Solver.cpp  PathFinder.cpp  SelectablePlanner.cpp  TestNode.cpp
Test/backendTest/: obstacles.json  path_result.json
Test/maps/: generate_test_map.py  map_director_359.yaml  map_foreign_741.yaml  map_myself_263.yaml  map_only_603.yaml  map_resource_489.yaml  map_reveal_107.yaml  map_training_839.yaml  map_unit_969.yaml
Test/urdf/: generated_robot.urdf
assets/: ROS_flowchart.drawio
bash/: cleanbackend.sh  entrypoint.sh  run_all.sh  run_backend.sh
