[package]
name = "robot_simulation_interface"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
bevy = { version = "0.18", features = ["wayland"] }

# XML PARSER
roxmltree = "0.20"

# math tools
glam = "0.29"
bevy_html_tailwind = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9"
tungstenite = "0.21"
url = "2.5"

[profile.dev.package."*"]
opt-level = 3